# TeleCat

./: .gitignore  200.html  404.html  LICENSE  README.md  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: build-and-release.yml
_nuxt/: BLbAm5lE.js  BhzKZ2m3.js  ChVTsAd_.js  CmPCiUaG.js  CxnDkQym.js  DEQbqWtT.js  Dt562Xib.js  DtOvc_a-.js  S2DBHlju.js  YlWUYWaC.js  entry.CWzhmms6.css  v8q2ZKRQ.js
_nuxt/builds/: latest.json
about/: index.html
app/: app.config.ts
app/composables/: pages.ts  useColorPickers.ts  useKeyboardControls.ts  useSettings.ts
app/layouts/: home.vue
app/pages/: about.vue  index.vue  setting.vue
app/sass/: main.sass
app/stores/: store.ts
assets/: -SqWFojk.js  2wsSpn9s.js  5cNR2aUw.js  A3XCFKb5.js  AOz891_S.js  B0a2CzAb.js  B1c2MYlx.js  B4DrrkLK.js  B6uniiMO.js  B7bN4cKD.js  B9AA4f2-.js  BGTIRIoa.js  BKfbFeYa.js  BMCud0uj.js  BMU-Rn5D.js  BNBUTgg-.js  BND53RcR.js  BQXrRbhz.js  BTllHknA.js  BVXK1VjW.js  BVyiRIWx.js  Bbpulnxz.js  Bcrw1LZG.js  BeMu9W5q.js  BfldOGOp.js  BhexMFnl.js  BiNo-clK.js  BmfAid90.js  Br5tSQt3.js  BrkeVmGb.js  BsP2gMju.js  Bv37dQPK.js  BywvVXkh.js  C-CFciCW.js  C0weIc1X.js  C1jkYUXl.js  C3JhxR0_.js  C4lOGIV0.js  C67zC_5Q.js  C7pwdkGB.js  (+77 more)
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: index.bak  (+2 more)
ci/: catlogo_Inspirations.pur  telecat_CI.ai
scripts/: postbuild.js  prebuild.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
types/: global.d.ts
(+26 files in other folders)
